--- a/assets/styles.css
+++ b/assets/styles.css
@@ -149,3 +149,34 @@ img {
 font-size: 15px;
 padding: 10px 0 0 15px;
 }
+
+@media(max-width: 760px){
+    .middle-part{
+    font-weight: 400;
+   position: relative;
+    top: 170px;
+    left: 100px;
+    font-size: 60px;
+}
+.search-buttons{
+    margin: -70px 0 0 20px;
+    position: relative;
+    top: 40px;
+    
+}
+.search-bar{
+    width: 230px;
+    height: 30px;
+    border-radius: 50px;
+    outline: none;
+    padding: 10px 0 0 20px;
+    border: 1px solid rgba(0, 0, 0, 0.438)
+}
+.text-slider{
+    font-size: 12px;
+}
+footer {
+    font-size: 13px;
+}
+
+}
